Creación de templates library, profile, book_detail

--- a/resena_libros/librosApp/templates/welcome.html
+++ b/resena_libros/librosApp/templates/welcome.html
@@ -15,7 +15,7 @@
       <p class="lead mt-3">Explora nuestro delicioso mundo de flanes y postres, preparados con amor y dedicación en el corazón de Santiago.</p>
       <img src="{% static 'img/flan-leche.jpg' %}" alt="Descripción de la imagen" class="img-fluid mt-4 mb-4">
       <p class="mb-5">Disfruta de la experiencia OnlyFlans, donde cada bocado te lleva a un viaje de sabor y tradición.</p>
-      <a href="{% url 'index' %}" class="btn btn-primary mb-5">Productos</a>
+      <a href="{% url 'index' %}" class="btn btn-primary mb-5">Biblioteca</a>
     </div>
   </div>
 </div>
