--- a/resena_libros/librosApp/templates/static_base.html
+++ b/resena_libros/librosApp/templates/static_base.html
@@ -11,25 +11,30 @@
 <body>
     {% block 'navbar' %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">Features</a>
-                  <a class="nav-link" href="#">Pricing</a>
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </div>
-          </div>
-          <div class="ml-auto">
-              <a class="btn btn-lg btn-info text-light me-2" href="{% url 'login' %}">Login</a>
-              <a class="btn btn-lg btn-info text-light me-2" href="{% url 'register' %}">Register</a>
-          </div>
-      </div>
-  </nav>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </div>
+            </div>
+            <div class="ml-auto d-flex align-items-center">
+                {% if user.is_authenticated %}
+                <span class="navbar-text mr-5 fw-bold me-3">Hola, {{ user.first_name }}</span>
+                <a href="{% url 'logout' %}" class="btn btn-danger me-2">Log Out</a>
+                {% else %}
+                <a href="{% url 'login' %}?next={{ request.path }}" class="btn btn-lg btn-info text-light me-2">Log In</a>
+                <a class="btn btn-lg btn-info text-light me-2" href="{% url 'register' %}">Register</a>
+                {% endif %}
+            </div>
+        </div>
+    </nav>
     {% endblock %}
 
     {% block 'header' %}
@@ -58,7 +63,7 @@
     {% endblock %}
 
     {% block 'footer' %}
-    <footer class="bg-dark text-center text-light p-4">
+    <footer class="bg-dark text-center text-light p-4 mt-5">
         <p class="mb-0">Inmuebles Plus. Todos los derechos reservados.</p>
     </footer>
     {% endblock %}
