Creación de funcionalidades filtros y README

--- a/resena_libros/librosApp/templates/index.html
+++ b/resena_libros/librosApp/templates/index.html
@@ -10,16 +10,16 @@
     <div class="row">
       <div class="col-md-6">
         <div class="text-center">
-          <img src="{% static 'img/vivienda-social.png' %}" alt="Busca Propiedad" class="img-fluid mb-3">
-          <h4 class="mt-5">Busca una Propiedad</h4>
-          <p>Encuentra la casa o departamento de tus sueños con nuestra amplia selección de propiedades.</p>
+          <img src="{% static 'img/busca-libro.jpg' %}" alt="Busca Propiedad" class="img-fluid mb-3" width="300px">
+          <h4 class="mt-5">Busca un Libro</h4>
+          <p>Encuentra el libro de tus sueños en nuestra amplia selección de obras literarias.</p>
         </div>
       </div>
       <div class="col-md-6">
         <div class="text-center mb-3">
-          <img src="{% static 'img/propiedad.png' %}" alt="Publica tu Vivienda" class="img-fluid mb-3">
-          <h4 class="mt-5">Publica tu Vivienda</h4>
-          <p>Pon tu vivienda en el mercado y llega a más personas interesadas en comprar o alquilar.</p>
+          <img src="{% static 'img/publica-libro.jpg' %}" alt="Publica tu Vivienda" class="img-fluid mb-3" width="300px">
+          <h4 class="mt-5">Publica tu Libro</h4>
+          <p>Pon tu obra en el mercado y llega a más personas interesadas en leer y disfrutar de tus creaciones literarias.</p>
         </div>
       </div>
     </div>
@@ -29,11 +29,11 @@
   <hr class="mb-4">
   <div class="row justify-content-center">
       <div class="col-md-6">
-          <h3>Una experiencia inmobiliaria sin limites</h3>
+          <h3>Una experiencia literaria sin limites</h3>
           <p><strong>Dirección:</strong> Calle Falsa #123, Providencia</p>
           <p><strong>Horario de atención:</strong> Lunes a Viernes de 9:00 a 18:00 hrs</p>
           <p><strong>Teléfono:</strong> +56 9 1111 1111</p>
-          <p><strong>Email:</strong> contacto@inmobiliariaplus.com</p>
+          <p><strong>Email:</strong> contacto@librosplus.com</p>
           <p>
             <strong>Facebook:</strong> 
             <a href="https://facebook.com/" target="_blank">
