--- a/resena_libros/librosApp/templates/welcome.html
+++ b/resena_libros/librosApp/templates/welcome.html
@@ -8,14 +8,14 @@
   <div class="row justify-content-center">
     <div class="col-md-8 text-center">
       {% if user.is_authenticated %}
-      <h1>Bienvenido a OnlyFlans</h1>
+      <h1>Bienvenido a Libros Plus</h1>
       {% else %}
-      <h1>Bienvenidos a OnlyFlans</h1>
+      <h1>Bienvenidos a Libros Plus</h1>
       {% endif %}
-      <p class="lead mt-3">Explora nuestro delicioso mundo de flanes y postres, preparados con amor y dedicación en el corazón de Santiago.</p>
+      <p class="lead mt-3">Explora nuestro agradable mundo de libros y lecturas, seleccionados con pasión y dedicación para ti.</p>
       <img src="{% static 'img/flan-leche.jpg' %}" alt="Descripción de la imagen" class="img-fluid mt-4 mb-4">
-      <p class="mb-5">Disfruta de la experiencia OnlyFlans, donde cada bocado te lleva a un viaje de sabor y tradición.</p>
-      <a href="{% url 'index' %}" class="btn btn-primary mb-5">Biblioteca</a>
+      <p class="mb-5">Sumérgete en la experiencia Libros Plus, donde cada página te transporta a un viaje de imaginación y conocimiento.</p>
+      <a href="{% url 'library' %}" class="btn btn-primary mb-5">Biblioteca</a>
     </div>
   </div>
 </div>
